# rag-nlp

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  RELATORIO_PROJETO.md  app.py  docker-compose.yaml  pyproject.toml
data/: eval_dataset.json  eval_dataset.sample.json  qualitative_eval_results.csv  qualitative_eval_results.jsonl  qualitative_rubric.md  retrieval_tradeoff_analysis.json  retrieval_tradeoffs.md
initdb/: 01-pgvector.sql
rag/: settings.py
rag/augmented/: augmented_node.py  evidence_guard.py
rag/evaluation/: qualitative_eval.py  recall_eval.py  retrieval_tradeoff_analysis.py
rag/graph/: model_provider.py  prompt.py  rag_graph.py  utils.py
rag/ingest/: extract_text.py  pgvector_store.py  reset_project_state.py  truncate_data.py
rag/retrieval/: retrieval_node.py  retriever.py
